# kioku-cli

./: Cargo.toml  LICENSE  README.md
assets/: wordlist.txt
src/: main.rs
