[package]
name = "kioku"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
git2 = "0.20.3"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
