[package]
name = "kioku-cli"
version = "0.1.0"
edition = "2024"
repository="https://github.com/CasBex/kioku-cli"

[[bin]]
name = "kioku"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
git2 = "0.20.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = { version = "1.0.149", features = ["std"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
